[package]
name = "docker-bootstrapper"
version = "0.1.0"
edition = "2021"

[dependencies]
bollard = "0.17.0"
dockerfiles = { version = "0.1.0", path = "../dockerfiles" }
flate2 = "1.0.31"
tar = "0.4.41"
futures = "0.3.30"
tracing = "0.1.40"
color-eyre = "0.6.3"

[dev-dependencies]
tokio = { version = "1.39.2", features = ["full"] }

