[package]
name = "docker-bootstrapper"
version = "0.1.0"
edition = "2021"

[dependencies]
bollard = "0.17.0"
flate2 = "1.0.31"
tar = "0.4.41"
futures = "0.3.30"
tracing = "0.1.40"
color-eyre = "0.6.3"
ctrlc = "3.4.4"
rand = "0.8.5"

[dev-dependencies]
tokio = { version = "1.39.2", features = ["full"] }
dockerfiles = { version = "0.1.0", path = "../dockerfiles" }
